Fix ALPFA watermark A cutoff with left padding

--- a/css/style.css
+++ b/css/style.css
@@ -800,6 +800,7 @@ footer .logo-img {
   letter-spacing: 0.12em;
   line-height: 1;
   white-space: nowrap;
+  padding-left: 0.2em;
 }
 
 .mission-image-col {
